Fixed applyPatch method (switched to ProcessBuilder)